# terminal-bench-cn

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  push.sh  pyproject.toml
.github/workflows/: ci.yml
paper/: main.tex  refs.bib
scripts/: cross_lingual_delta.py  leaderboard.py  run.py
tasks/001/: instruction.en.md  instruction.zh.md
tasks/001/docker/: Dockerfile
tasks/001/tests/: test_001.sh
tasks/002/: instruction.en.md  instruction.zh.md
tasks/002/docker/: Dockerfile
tasks/002/tests/: test_002.sh
tasks/003/: instruction.en.md  instruction.zh.md
tasks/003/docker/: Dockerfile
tasks/003/tests/: test_003.sh
tasks/004/: instruction.en.md  instruction.zh.md
tasks/004/docker/: Dockerfile
tasks/004/tests/: test_004.sh
tasks/005/: instruction.en.md  instruction.zh.md
tasks/005/docker/: Dockerfile
tasks/005/tests/: test_005.sh
