[project]
name = "terminal-bench-cn"
version = "0.1.0"
description = "Chinese-language slice of Terminal-Bench for evaluating LLM coding agents"
authors = [{ name = "ychenfen" }]
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.6",
  "PyYAML>=6.0",
  "rich>=13.7",
]

[project.optional-dependencies]
dev = ["ruff>=0.4", "black>=24.0", "pytest>=8", "pre-commit>=3.7"]

[project.scripts]
tbcn = "scripts.run:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.black]
line-length = 100
target-version = ["py310"]
